--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.3",
+    "classnames": "^2.3.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
