--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-alert": "^7.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
