--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@amcharts/amcharts5": "^5.3.10",
     "@amcharts/amcharts5-fonts": "^5.0.1",
     "@amcharts/amcharts5-geodata": "^5.1.0",
+    "@faker-js/faker": "^8.2.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.3",
@@ -16,12 +17,16 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@weknow/react-bubble-chart-d3": "^1.0.12",
     "axios": "^1.3.4",
     "axios-mock-adapter": "^1.21.3",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
+    "react-chartjs-2": "^5.2.0",
+    "react-date-picker": "^10.5.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
