--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-search-autocomplete": "^8.5.2",
     "react-switch": "^7.0.0",
     "react-verification-code-input": "^1.2.9",
     "redux": "^4.2.1",
