--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "cr.yandex/crppli9c5vt9gkovp8vm/hello:gitlab-$CI_COMMIT_SHORT_SHA"
+      --destination "cr.yandex/crppli9c5vt9gkovp8vm/des-web-app:gitlab-$CI_COMMIT_SHORT_SHA"
     # Delete the metadata file.
     - rm /kaniko/token
 deploy:
@@ -31,4 +31,4 @@ deploy:
     - kubectl config set-credentials admin --token="$KUBE_TOKEN"
     - kubectl config set-context default --cluster=k8s --user=admin
     - kubectl config use-context default
-    - cd helm && helm upgrade -n nginx --install -f values.yaml --set imageTag="gitlab-$CI_COMMIT_SHORT_SHA" test ./
+    - cd helm && helm upgrade -n despay --install -f values.yaml --set imageTag="gitlab-$CI_COMMIT_SHORT_SHA" des-web-app ./
