--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,5 @@ deploy:
     - kubectl config set-credentials admin --token="$KUBE_TOKEN"
     - kubectl config set-context default --cluster=k8s --user=admin
     - kubectl config use-context default
+    - kubectl get pods
     - cd helm && helm upgrade -n despay --install -f values.yaml --set imageTag="gitlab-$CI_COMMIT_SHORT_SHA" des-web-app ./
