--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -19,3 +19,10 @@ spec:
           image: "cr.yandex/crppli9c5vt9gkovp8vm/des-web-app:{{ .Values.imageTag }}"
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              memory: "1024Mi"
+              cpu: "500m"
+            limits:
+              memory: "2048Mi"
+              cpu: "1000m"
