--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "messager-app",
-  "version": "0.1.0",
+  "name": "des-web-app",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@amcharts/amcharts5": "^5.3.10",
