--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -68,7 +68,7 @@ http {
          }
 
          location /api/ {
-            proxy_pass http://localhost:8080;
+            proxy_pass http://des-api:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
