--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,78 +1,40 @@
-worker_processes 4;
+worker_processes  auto;
 
-#error_log  /var/log/nginx/error.log warn;
-error_log  /dev/stdout warn;
+error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
 
 events {
-   worker_connections  1024;
-    multi_accept on;
-    use epoll;
+    worker_connections  1024;
 }
 
 http {
-    ################
-    # Basic settings
-    ################
-
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    reset_timedout_connection on;
-    types_hash_max_size 2048;
-    server_tokens off;
-
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
-    ##################
-    # Logging settings
-    ##################
-
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log  /var/log/nginx/access.log  main;
+    sendfile        on;
+    keepalive_timeout  65;
+    gzip  on;
 
-    #access_log  /var/log/nginx/access.log;
-      access_log /dev/stdout;
+    server {
+        listen 8080;
 
-    ###############
-    # Gzip settings
-    ###############
-
-    gzip on;
-    gzip_disable "msie6";
-    gzip_vary on;
-    #gzip_proxied any;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_comp_level 2;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_min_length  1000;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/$;
-    client_max_body_size 20M;
-      server {
-         listen 8080;
-         sendfile off;
-         server_name localhost;
-         root /app/www;
-
-
-         location / {
-            try_files $uri /index.html?$args;
-            add_header Last-Modified $date_gmt;
-            add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-            if_modified_since off;
-            expires -1;
-            etag off;
-         }
-
-         location /api/ {
+        # Example of reverse proxy, separate front end and back end
+        # Serve the built front end assets
+        location / {
+            index /index.html;
+            root /app/www/;
+            index       index.html index.htm;
+            try_files   $uri $uri/ /index.html;
+        }
+		location /api/ {
             proxy_pass http://des-api:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
          }
-      }
+    }
 }
