--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,8 @@ deploy:
 #  image: gcr.io/cloud-builders/kubectl:latest
   image: lwolf/helm-kubectl-docker:latest
   stage: deploy
+  only:
+    - main
   script:
     - kubectl config set-cluster k8s --server="$KUBE_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials admin --token="$KUBE_TOKEN"
